--- a/sass/content/_media.scss
+++ b/sass/content/_media.scss
@@ -77,7 +77,7 @@
     position: relative;
     overflow: hidden;
     @media screen and (max-width:$screen-xs){
-        margin-bottom:1em;
+        margin-bottom:2em;
     }
     @media screen and (min-width:$screen-md){
         float:left;
@@ -144,15 +144,14 @@
             }
         }
     }
-    @media screen and (max-width:$screen-xs){
-        &:last-child{
-            border:5px solid red;
+    &:last-child{
+        
             .portfolio_content{
-                
+                color:red !important;
 /*                top:-100%;
                 bottom:100%;*/
             }
-        }
+
     }
     @media screen and (min-width:$screen-md){
         &:nth-child(4n):hover{
@@ -160,6 +159,14 @@
                 left:-109%;
                 right:100%;
             }
+        }
+        &.hentry:nth-last-child(1){
+            .portfolio_content{
+                top:-100%;
+                bottom:calc(100% + 1em);
+            }
+            opacity:.2;
+
         }
     }
 
