--- a/sass/content/_media.scss
+++ b/sass/content/_media.scss
@@ -2,7 +2,7 @@
     border:0;
     margin:0;
     @media screen and (max-width:$screen-xs){
-        /*        height:calc(100vH - 198px);*/
+        min-height:100vH;
     }
 }
 .flex-control-nav{
@@ -37,7 +37,12 @@
         }
         &.flex-prev, &.flex-next{
             @media screen and (max-width:$screen-xs){
-                top:15%;
+                body.portfolio &{top:45%;}
+                body.team &{top:20%}   
+            }
+            @media screen and (min-width:$screen-xs) and (max-width:$screen-sm){
+                body.portfolio &{top:45%;}
+                body.team &{top:40%}   
             }
         }
         &.flex-prev:before{
@@ -68,6 +73,9 @@
 /**** Portfolio ****/
 
 #portfolio{
+    @media screen and (min-width:$screen-xs) and (max-width:$screen-sm){
+        margin:0 -2%;
+    }
     @media screen and (min-width:$screen-md){
         margin:0 -1%;
     }
@@ -79,10 +87,16 @@
     @media screen and (max-width:$screen-xs){
         margin-bottom:2em;
     }
+    @media screen and (min-width:$screen-xs) and (max-width:$screen-sm){
+        float:left;
+        width: 46%;
+        margin:2%;
+        .portfolio_content{display:none;}
+    }
     @media screen and (min-width:$screen-md){
         float:left;
         width: 23%;
-         margin:1%;
+        margin:1%;
     }
 
     > [class*="portfolio_"]{
@@ -95,7 +109,9 @@
     }
     > .portfolio_thumbnail{
         img {
-            @include filter(grayscale(100%));
+            @media screen and (min-width:$screen-md){
+                @include filter(grayscale(100%));
+            }
         }
     }
     > .portfolio_content{
@@ -106,7 +122,7 @@
             top:100%;
             bottom:-100%;
         }
-        @media screen and (min-width:$screen-md){
+        @media screen and (min-width:$screen-xs + 1){
             left:-100%;
             right:100%;
         }
@@ -126,6 +142,8 @@
     }
     &:hover, &:focus{
         overflow:visible;
+        z-index:9;
+        cursor:pointer;
         > .portfolio_content{
             @media screen and (min-width:$screen-md){
                 left:100%;
@@ -140,18 +158,27 @@
         > .portfolio_thumbnail{
             padding:5px;
             img {
-                @include filter(grayscale(0%));
+                @media screen and (min-width:$screen-md){
+                    @include filter(grayscale(0%));
+                }
             }
         }
     }
-    &:last-child{
-        
+    @media screen and (max-width:$screen-xs){
+        &:last-child:hover,&:last-child:focus{
             .portfolio_content{
-                color:red !important;
-/*                top:-100%;
-                bottom:100%;*/
+                top: calc(-100% - 2em);
+                bottom: 100%;
             }
-
+        }
+    }
+    @media screen and (min-width:$screen-xs) and (max-width:$screen-sm){
+        &:nth-child(2n):hover{
+            .portfolio_content{
+                left:-109%;
+                right:100%;
+            }
+        }
     }
     @media screen and (min-width:$screen-md){
         &:nth-child(4n):hover{
@@ -160,14 +187,5 @@
                 right:100%;
             }
         }
-        &.hentry:nth-last-child(1){
-            .portfolio_content{
-                top:-100%;
-                bottom:calc(100% + 1em);
-            }
-            opacity:.2;
-
-        }
     }
-
 }
