--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -10,6 +10,8 @@ $dark-color-grey:#52595F;
 $base-color-white:#fff;
 $primary-color:#6D3332;
 $primary-color-darker:#623636;
+$portfolio-thumb-color:#4d575e;
+$portfolio-bg-color:#000;
 
 
 //Grids, Margins and paddings
