--- a/sass/content/_layout.scss
+++ b/sass/content/_layout.scss
@@ -1,11 +1,28 @@
-html {
+/* Sticky Footer */
+/*html{
     position: relative;
     min-height: 100%;
-    @media screen and (max-width:$screen-sm){
-        background:$primary-color;
-    }
 }
 body {
+    &.home{
+        margin-bottom: $footerHomeHeight;
+        > footer {
+            height:$footerHomeHeight;
+        }
+    }
+    &:not(.kontakt){
+        margin-bottom: $footerHeight;  
+        > footer{
+            height:$footerHeight;
+            width: 100vW;
+            position: absolute;
+            bottom: 0;       
+        }
+    }
+}*/
+/* end sticky footer */
+/*Layout Home */
+body{
     &.home{
         height:100vH;
         position: relative;
@@ -29,32 +46,9 @@ body {
         @media screen and (min-width:$screen-md){
             background-size:cover;
             background-position:50% 25%;
-            margin-bottom: $footerHomeHeight;
-        }
-
-        > footer {
-            height:$footerHomeHeight;
         }
     }
-    &:not(.kontakt){
-        margin-bottom: $footerHeight;  
-        > footer{
-            height:$footerHeight;
-            width: 100vW;
-            position: absolute;
-            bottom: 0;       
-        }
-    }
-    &:not(.home){
-        > main {
-            background: white; 
-            @media screen and (max-width:$screen-xs){
-                margin-top:160px;
-                .post_content{
-                    padding:1em 2em;
-                }
-            }
-        }
+    &:not(.home) {
         > header{
             @media screen and (min-width:$screen-md){
                 background: white;
@@ -63,16 +57,29 @@ body {
                 background: white; 
             }
         }
-        > footer {
-            background:$primary-color;
-            @media screen and (min-width:$screen-md){
-                padding-top:2 * $vgrid;
+        > main {
+            @media screen and (max-width:$screen-maxPhone){
+                .post_content{
+                    padding:1em 2em;
+                }
             }
-
+        }
+        > .footer {
+            background:$primary-color;
             * {color:$base-color-white;}
-            @media screen and (max-width:$screen-xs){
+            .impressum{padding-top:2 * $vgrid;}
+            @media screen and (max-width:$screen-maxPhone){
                 padding:0 2em;
             }
+        }
+    }
+    &.kontakt, &.leistungen{
+        > main {
+            background: $base-bg-color!important;
+            padding-top:5.3em;
+        }
+        .intro{
+            margin-bottom: 1.5 * $vgrid;
         }
     }
 }
@@ -83,12 +90,6 @@ body {
     #portfolio {
         @media screen and (max-width:$screen-md){
             padding:0 2em;
-        }
-        @media screen and (min-width:$screen-lg){
-            padding:0;
-            > div {
-                    padding:0;
-            }
         }
     }
     &.related.bottom-fold {
@@ -110,9 +111,14 @@ body {
             background: white;
             position: absolute;
             top:0;
-            left:44px;
-            right:44px;
+            left:40px;
+            right:40px;
             height:40px;
+            border:{
+                width:0 4px;
+                color:#000;
+                style:solid;
+            }
         }
         .logo, nav{
             position: absolute;
@@ -121,44 +127,26 @@ body {
             right: 0;
             width: 100%;
         }
+        .logo{
+            border-top:4px solid #000;
+            top:40px;
+            margin:0;
+        }
     }
     .logo {
         @media screen and (max-width:$screen-xs){
-            top:41px;
             z-index: 5;
             height: 120px;
-            margin-top:4px;
         }
         a {
             display: block;
             position: relative;
-            @media screen and (max-width:$screen-xs){
-                width: 100%;
-                svg {
-                    position: relative;
-                    left: auto;
-                    right: .8em;
-                    width: calc(80% - 1.6em);
-                    top: -1em;
-                }
-                /*            &.smaller{
-                svg {
-                    height:70%;
-                }
-            }*/
-            }
-            @media screen and (min-width:$screen-xs) and (max-width:$screen-md){
-                width:50%;
-                float:right;
-                svg {
-                    width: 100%;
-                    padding:1em 2em 0 1em;
-                }
-            }
-
             span.name {
-                display:none;
+                visibility: hidden;
+                height:0;
+                line-height: 0;
             }
+            /** ToDO**/
             span.description{
                 position: absolute;
                 letter-spacing: .01em;
@@ -182,6 +170,26 @@ body {
                     right:125px;
                     bottom: 43px;
                     width: 375px;
+                }
+            }
+            @media screen and (max-width:$screen-xs){
+                width: 100%;
+                /** ToDO**/
+                svg {
+                    position: relative;
+                    left: auto;
+                    top: -1em;
+                    right:1em;
+                    /*                    right: .8em;
+                                        width: calc(80% - 1.6em);*/
+                }
+            }
+            @media screen and (min-width:$screen-xs) and (max-width:$screen-md){
+                width:50%;
+                float:right;
+                svg {
+                    width: 100%;
+                    padding:1em 2em 0 1em;
                 }
             }
         }
