--- a/sass/content/_media.scss
+++ b/sass/content/_media.scss
@@ -1,8 +1,117 @@
+/**** Portfolio ****/
+.portfolio-item{
+    position: relative;
+    overflow: hidden;
+    margin-bottom:1.33em;
+
+    > [class*="portfolio_"]{
+        position:absolute;
+        top:0;
+        bottom: 0;
+        left:0;
+        right: 0;
+        background: $portfolio-bg-color;
+    }
+    > .portfolio_thumbnail{
+        @include alpha-background-color(rgba($portfolio-thumb-color, 0.9), white); 
+        background-blend-mode: luminosity;
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        span{visibility: hidden;}
+    }
+    > .portfolio_content{
+        *{color:white !important;}
+        text-align: center;
+        padding:2em;
+        h2 {@include ellipsis(100%);}
+        svg {
+            height: 3px;
+            width: 100%;
+            margin-top:1em;
+            margin-bottom: 1em;
+        }
+        p {
+            font-size: 1em;
+            line-height: 1.2;
+        }
+        .view-article{display: none;}
+        @media screen and (max-width:$screen-xs){
+            opacity:0;
+            @include transition(all 2.0s ease-in-out);
+        }
+        @media screen and (min-width:$screen-xs + 1){
+            left:-100%;
+            right:100%;
+        }
+    }
+    &:hover, &:focus{
+        overflow:visible;
+        cursor:pointer;
+        > .portfolio_content{
+            z-index: 99;
+            @media screen and (max-width:$screen-xs){
+                opacity:1;
+            }
+            @media screen and (min-width:$screen-xs + 1){
+                left:100%;
+                right:calc(-106% - 10px);
+            }
+        }
+        > .portfolio_thumbnail{
+            border:5px solid $portfolio-bg-color;
+            background-blend-mode: normal; 
+        }
+        @media screen and (min-width:$screen-xs) and (max-width:$screen-sm){
+            &:nth-child(2n){
+                .portfolio_content{
+                    left: calc(-106% - 10px);
+                    right: 100%;
+                }
+            }
+        }
+        @media screen and (min-width:$screen-sm) and (max-width:960px - 1px){
+            &:nth-child(3n){
+                .portfolio_content{
+                    left: calc(-106% - 10px);
+                    right: 100%;
+                }
+            }
+        }
+        @media screen and (min-width:960px){
+            &:nth-child(4n){
+                .portfolio_content{
+                    left: calc(-106% - 10px);
+                    right: 100%;
+                }
+            }
+        }
+    }
+}
+
+//Iframe Elastic
+.iframe-elastic {
+    position: relative;
+    padding-bottom: 55%; /* ratio width/height in % Bsp. (450 ÷ 500 = 0.9 = 90%) */
+    padding-top: 15px;
+    height: 0;
+    overflow: hidden;
+    iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+}
+//Flexslider
 .flexslider{
     border:0;
     margin:0;
     @media screen and (max-width:$screen-xs){
-        min-height:100vH;
+        .single &{
+            min-height:100vH;
+        }
     }
 }
 .flex-control-nav{
@@ -15,9 +124,10 @@
         }
     }
 }
-
 [class*="flex-nav"]{
     > a{
+        z-index:0;
+        @media screen and (max-width:$screen-md){}
         &:before{
             content:'' !important;
             background: rgba(255,255,255,.5) url("../svg/flex-nav.svg") no-repeat center center;
@@ -28,8 +138,9 @@
         }
         &.flex-prev{
             top:50%;
-            bottom:auto;
-            @media screen and (min-width:$screen-md){
+            bottom:auto
+                /** ToDO**/
+            @media screen and (orientation:landscape){
                 .single & {left:0;}
                 [class*="subpages"] & {left:calc(50% + 24px) !important;}   
             }
@@ -51,141 +162,5 @@
         @include circle(50px);
         font-size: 0;
         line-height: 0;
-    }
-}
-
-//Iframe Elastic
-.iframe-elastic {
-    position: relative;
-    padding-bottom: 55%; /* ratio width/height in % Bsp. (450 ÷ 500 = 0.9 = 90%) */
-    padding-top: 15px;
-    height: 0;
-    overflow: hidden;
-    iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-    }
-}
-
-/**** Portfolio ****/
-
-#portfolio{
-    @media screen and (min-width:$screen-xs) and (max-width:$screen-sm){
-        margin:0 -2%;
-    }
-    @media screen and (min-width:$screen-md){
-        margin:0 -1%;
-    }
-
-}
-.portfolio-item{
-    position: relative;
-    overflow: hidden;
-    @media screen and (max-width:$screen-xs){
-        margin-bottom:2em;
-    }
-    @media screen and (min-width:$screen-xs) and (max-width:$screen-sm){
-        float:left;
-        width: 46%;
-        margin:2%;
-        .portfolio_content{display:none;}
-    }
-    @media screen and (min-width:$screen-md){
-        float:left;
-        width: 23%;
-        margin:1%;
-    }
-
-    > [class*="portfolio_"]{
-        position:absolute;
-        top:0;
-        bottom: 0;
-        left:0;
-        right: 0;
-        background: rgba(0,0,0,1);
-    }
-    > .portfolio_thumbnail{
-        img {
-            @media screen and (min-width:$screen-md){
-                @include filter(grayscale(100%));
-            }
-        }
-    }
-    > .portfolio_content{
-        *{color:white !important;}
-        text-align: center;
-        padding:2em;
-        @media screen and (max-width:$screen-xs){
-            top:100%;
-            bottom:-100%;
-        }
-        @media screen and (min-width:$screen-xs + 1){
-            left:-100%;
-            right:100%;
-        }
-        z-index:99;
-        h2 {@include ellipsis(100%);}
-        svg {
-            height: 3px;
-            width: 100%;
-            margin-top:1em;
-            margin-bottom: 1em;
-        }
-        p {
-            font-size: 1em;
-            line-height: 1.2;
-        }
-        .view-article{display: none;}
-    }
-    &:hover, &:focus{
-        overflow:visible;
-        z-index:9;
-        cursor:pointer;
-        > .portfolio_content{
-            @media screen and (min-width:$screen-md){
-                left:100%;
-                right:calc(-109%);
-            }
-            @media screen and (max-width:$screen-xs){
-                top:100%;
-                bottom:calc(-100% - 1em);
-            }
-            z-index: 999;
-        }
-        > .portfolio_thumbnail{
-            padding:5px;
-            img {
-                @media screen and (min-width:$screen-md){
-                    @include filter(grayscale(0%));
-                }
-            }
-        }
-    }
-    @media screen and (max-width:$screen-xs){
-        &:last-child:hover,&:last-child:focus{
-            .portfolio_content{
-                top: calc(-100% - 2em);
-                bottom: 100%;
-            }
-        }
-    }
-    @media screen and (min-width:$screen-xs) and (max-width:$screen-sm){
-        &:nth-child(2n):hover{
-            .portfolio_content{
-                left:-109%;
-                right:100%;
-            }
-        }
-    }
-    @media screen and (min-width:$screen-md){
-        &:nth-child(4n):hover{
-            .portfolio_content{
-                left:-109%;
-                right:100%;
-            }
-        }
     }
 }
